Configuracion DB Context y Connection String

--- a/API/MediApp_API/appsettings.json
+++ b/API/MediApp_API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DataBaseContext": "Server=(localdb)\\localDB; Database=MediApp_DB; Integrated Security=true; TrustServerCertificate=True"
+  }
 }
