Configuracion DatabaseContext, ajuste modelos, segunda migracion, metodo Get All Patients funcionando

--- a/API/MediApp_API/appsettings.json
+++ b/API/MediApp_API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DataBaseContext": "Server=(localdb)\\localDB; Database=MediApp_DB; Integrated Security=true; TrustServerCertificate=True"
+    "DataBaseContext": "Server=(localdb)\\localDB; Database=MediApp_DB; Integrated Security=true; TrustServerCertificate=True; MultipleActiveResultSets=True;"
   }
 }
