Get All Controladores

--- a/API/MediApp_API/appsettings.json
+++ b/API/MediApp_API/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DataBaseContext": "Server=(localdb)\\localDB; Database=MediApp_DB; Integrated Security=true; TrustServerCertificate=True; MultipleActiveResultSets=True;"
+    "DataBaseLocal": "Server=(localdb)\\localDB; Database=MediApp_DB; Integrated Security=true; TrustServerCertificate=True; MultipleActiveResultSets=True;",
+    "DataBaseAzure": "Server=tcp:mediappdb.database.windows.net,1433;Initial Catalog=MediApp;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\";"
   }
 }
